--- a/index.html
+++ b/index.html
@@ -1,280 +1,204 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Runke</title>
+<!-- Place this HTML structure inside your <body> tag -->
 
-  <link rel="icon" href="sushi.png" type="image/x-icon" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&display=swap" rel="stylesheet" />
+<!-- Disclaimer Modal -->
+<div class="disclaimer-modal" id="disclaimerModal">
+  <div class="disclaimer-content">
+    <p><strong>WARNING:</strong> This site is really only optimized on computer, so it won't be very pretty on the phone we can tell you are using.</p>
+    <button id="disclaimerButton">ok brah</button>
+  </div>
+</div>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Special Gothic Expanded One', sans-serif;
-      background-color: #000;
-      color: #ccc;
-      overflow-x: hidden;
+<img src="backtruck.jpeg" alt="Hero" class="hero-image" id="heroImage" />
+
+<div class="hero-overlay">
+  <div class="blanket" id="blanket"></div>
+</div>
+
+<div class="hero">
+  <img src="sillysilly.png" alt="Runke Logo" class="logo" />
+  <div class="intro">
+    <h1>Who are we?</h1>
+    <p>We (runke) are a 3 person alternative rock band. The three of us have grown up with a strong friendship, a deep connection to music theory, and a strong desire to make music.</p>
+    
+    <!-- MOBILE GALLERY: visible only on small screens -->
+    <div class="gallery gallery-mobile">
+      <div class="gallery-row">
+        <img src="Dane.JPG" alt="Dane" class="gallery-img">
+        <img src="Nick.JPG" alt="Nick" class="gallery-img">
+      </div>
+      <div class="gallery-row center">
+        <img src="Lucas.JPG" alt="Lucas" class="gallery-img">
+      </div>
+    </div>
+
+    <!-- Spacer after mobile gallery -->
+    <div class="mobile-gap"></div>
+  </div>
+</div>
+
+<div class="black-box">
+  <p>
+    Runke is, simply put, a project by and for people who love music.<br><br>
+    We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br><br>
+    The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br><br>
+    We love music, and we hope you'll join our little tribe and enjoy music with us.<br>
+  </p>
+
+  <!-- DESKTOP GALLERY: visible only on larger screens -->
+  <div class="gallery gallery-desktop">
+    <div class="gallery-row">
+      <img src="Dane.JPG" alt="Dane" class="gallery-img">
+      <img src="Nick.JPG" alt="Nick" class="gallery-img">
+    </div>
+    <div class="gallery-row center">
+      <img src="Lucas.JPG" alt="Lucas" class="gallery-img">
+    </div>
+  </div>
+</div>
+
+<div class="footer">
+  <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · (256) 339 3279</p>
+</div>
+
+<!-- JS and Style Updates -->
+<script>
+  const heroImage = document.getElementById('heroImage');
+  const blanket = document.getElementById('blanket');
+  const disclaimerModal = document.getElementById('disclaimerModal');
+  const disclaimerButton = document.getElementById('disclaimerButton');
+
+  function updateHeroImage() {
+    if (window.innerWidth <= 480) {
+      heroImage.src = '2222ba.jpg';
+    } else {
+      heroImage.src = 'backtruck.jpeg';
+    }
+  }
+
+  window.addEventListener('resize', updateHeroImage);
+  window.addEventListener('load', updateHeroImage);
+
+  window.addEventListener('scroll', () => {
+    if (window.innerWidth <= 480) return;
+
+    const scrollY = window.scrollY;
+    const maxBlur = 6;
+    const blurAmount = Math.min(scrollY / 60, maxBlur);
+    const scaleAmount = 1 + scrollY / 5000;
+    const opacityAmount = Math.min(scrollY / 300, 1);
+
+    blanket.style.opacity = opacityAmount;
+    blanket.style.backdropFilter = `blur(${blurAmount}px)`;
+    heroImage.style.filter = `blur(${1 + blurAmount}px)`;
+    heroImage.style.transform = `scale(${scaleAmount})`;
+  });
+
+  window.addEventListener('load', () => {
+    if (window.innerWidth <= 480) {
+      disclaimerModal.style.display = 'flex';
+      document.body.style.overflow = 'hidden';
+    }
+  });
+
+  disclaimerButton.addEventListener('click', () => {
+    disclaimerModal.style.display = 'none';
+    document.body.style.overflow = '';
+  });
+</script>
+
+<style>
+  /* ...existing styles... */
+
+  .gallery-img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+  }
+
+  .gallery-row {
+    display: flex;
+    justify-content: center;
+    gap: 24px; /* Slightly more spacing */
+  }
+
+  .gallery {
+    display: none;
+  }
+
+  .gallery-desktop {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding-top: 40px;
+  }
+
+  .footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    padding: 5px 0;
+    background: #000;
+    color: rgba(255, 255, 255, 0.7);
+    z-index: 10;
+    pointer-events: none;
+  }
+
+  .footer a {
+    color: #00f;
+    text-decoration: none;
+    font-weight: bold;
+    pointer-events: auto;
+  }
+
+  .footer a:hover {
+    color: #ccc;
+  }
+
+  @media (max-width: 480px) {
+    .gallery-desktop {
+      display: none;
     }
 
-    .hero-image {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100vh;
-      object-fit: cover;
-      z-index: -2;
-    }
-
-    .hero {
-      position: relative;
-      height: 100vh;
-      text-align: center;
+    .gallery-mobile {
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
+      gap: 20px;
+      padding-top: 0;
     }
 
-    .logo {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      height: 100px;
+    .mobile-gap {
+      height: 30px;
     }
 
-    .intro {
-      background-color: rgba(0, 0, 0, 0.65);
-      padding: 30px;
-      border-radius: 16px;
-      max-width: 600px;
-      margin: auto;
-      z-index: 1;
-    }
-
-    .intro h1 {
-      font-size: 36px;
-      color: #fff;
-    }
-
-    .intro p {
-      font-size: 16px;
-      color: #ccc;
-    }
-
-    .black-box {
-      background-color: black;
-      padding: 60px 20px;
-      width: 100%;
-      box-sizing: border-box;
-      text-align: center;
-    }
-
-    .black-box p {
-      font-size: 20px;
-      color: white;
-      margin-bottom: 30px;
-    }
-
-    /* GALLERY SHARED */
-    .gallery-img {
-      width: 150px;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
-    }
-
-    .gallery-row {
-      display: flex;
-      justify-content: center;
-      gap: 24px;
-      margin-bottom: 20px;
-    }
-
-    /* DESKTOP GALLERY */
-    .desktop-gallery {
-      display: none;
-    }
-
-    /* MOBILE GALLERY */
-    .mobile-gallery {
-      display: none;
-      margin-top: 20px;
-      margin-bottom: 30px;
-    }
-
-    /* MOBILE DISCLAIMER */
     .disclaimer-modal {
-      display: none;
+      display: flex;
       position: fixed;
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: rgba(0, 0, 0, 0.75);
-      backdrop-filter: blur(5px);
-      z-index: 9999;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: white;
       justify-content: center;
       align-items: center;
+      z-index: 1000;
+      backdrop-filter: blur(6px);
+    }
+  }
+
+  @media (min-width: 481px) {
+    .gallery-mobile {
+      display: none;
     }
 
-    .disclaimer-content {
-      background-color: white;
-      padding: 20px;
-      border-radius: 10px;
-      color: black;
-      text-align: center;
-      max-width: 90%;
+    .disclaimer-modal {
+      display: none !important;
     }
-
-    .disclaimer-content button {
-      margin-top: 10px;
-      padding: 8px 16px;
-      font-size: 16px;
-      background-color: black;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .footer {
-      text-align: center;
-      font-size: 14px;
-      padding: 20px 0;
-      color: rgba(255, 255, 255, 0.7);
-    }
-
-    .footer a {
-      color: #0af;
-      text-decoration: none;
-    }
-
-    /* MOBILE DEVICES: under 500px */
-    @media (max-width: 499px) {
-      .hero {
-        flex-direction: column;
-        height: auto;
-        padding-top: 200px;
-      }
-
-      .hero-image {
-        position: static;
-        height: 200px;
-      }
-
-      .logo {
-        display: none;
-      }
-
-      .intro {
-        background: black;
-        border-radius: 0;
-        padding: 30px 20px;
-      }
-
-      .intro h1 {
-        font-size: 28px;
-      }
-
-      .intro p {
-        font-size: 16px;
-      }
-
-      .mobile-gallery {
-        display: block;
-      }
-
-      .desktop-gallery {
-        display: none;
-      }
-
-      .disclaimer-modal {
-        display: flex;
-      }
-    }
-
-    /* DESKTOP DEVICES: 500px and up */
-    @media (min-width: 500px) {
-      .mobile-gallery {
-        display: none;
-      }
-
-      .desktop-gallery {
-        display: block;
-      }
-
-      .disclaimer-modal {
-        display: none;
-      }
-    }
-  </style>
-</head>
-
-<body>
-  <!-- DISCLAIMER POPUP -->
-  <div class="disclaimer-modal" id="disclaimerModal">
-    <div class="disclaimer-content">
-      <p><strong>WARNING:</strong> This site is really only optimized on computer, so it won't be very pretty on the phone we can tell you are using.</p>
-      <button id="closeDisclaimer">Okay</button>
-    </div>
-  </div>
-
-  <img src="backtruck.jpeg" alt="Hero" class="hero-image" />
-
-  <div class="hero">
-    <img src="sillysilly.png" alt="Runke Logo" class="logo" />
-    <div class="intro">
-      <h1>Who are we?</h1>
-      <p>We (runke) are a 3 person alternative rock band. The three of us have grown up with a strong friendship, a deep connection to music theory, and a strong desire to make music.</p>
-    </div>
-
-    <!-- MOBILE GALLERY (AFTER WHO ARE WE) -->
-    <div class="mobile-gallery">
-      <div class="gallery-row">
-        <img src="Dane.JPG" alt="Dane" class="gallery-img" />
-        <img src="Nick.JPG" alt="Nick" class="gallery-img" />
-      </div>
-      <div class="gallery-row">
-        <img src="Lucas.JPG" alt="Lucas" class="gallery-img" />
-      </div>
-    </div>
-  </div>
-
-  <div class="black-box">
-    <p>
-      Runke is, simply put, a project by and for people who love music.<br><br>
-      We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br><br>
-      The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br><br>
-      We love music, and we hope you'll join our little tribe and enjoy music with us.
-    </p>
-
-    <!-- DESKTOP GALLERY (AT THE BOTTOM) -->
-    <div class="desktop-gallery">
-      <div class="gallery-row">
-        <img src="Dane.JPG" alt="Dane" class="gallery-img" />
-        <img src="Nick.JPG" alt="Nick" class="gallery-img" />
-      </div>
-      <div class="gallery-row">
-        <img src="Lucas.JPG" alt="Lucas" class="gallery-img" />
-      </div>
-    </div>
-  </div>
-
-  <div class="footer">
-    <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · (256) 339 3279</p>
-  </div>
-
-  <script>
-    const disclaimer = document.getElementById("disclaimerModal");
-    const closeBtn = document.getElementById("closeDisclaimer");
-
-    closeBtn.addEventListener("click", () => {
-      disclaimer.style.display = "none";
-    });
-  </script>
-</body>
-</html>
+  }
+</style>
