--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
       Runke is, simply put, a project by and for people who love music.<br><br>
       We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br><br>
       The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br><br>
-      We love music, and we hope you'll join us in our journey, and enjoy some music :) <br>
+      We love music, and we hope you'll join us in our journey :)  <br>
     </p>
 
     <div class="gallery">
