--- a/index.html
+++ b/index.html
@@ -131,21 +131,22 @@
 
     .gallery {
       display: flex;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
       justify-content: center;
       gap: 16px;
       margin-top: 40px;
+      overflow-x: auto;
     }
 
     .member {
       display: flex;
       flex-direction: column;
       align-items: center;
-      max-width: 220px;
+      max-width: 140px;
     }
 
     .gallery img {
-      width: 220px;
+      width: 140px;
       height: auto;
       border-radius: 12px;
       object-fit: cover;
