--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     }
 
     .gallery img {
-      width: 180px; /* Updated width for bigger images */
+      width: 182px; /* Slightly increased width */
       height: auto;
       border-radius: 12px;
       object-fit: cover;
@@ -366,3 +366,34 @@
     const disclaimerButton = document.getElementById('disclaimerButton');
 
     function updateHeroImage() {
+      if (window.innerWidth <= 480) {
+        heroImage.src = '2222ba.jpg'; 
+      } else {
+        heroImage.src = 'backtruck.jpeg';
+      }
+    }
+
+    window.addEventListener('resize', updateHeroImage);
+    window.addEventListener('load', updateHeroImage);
+
+    window.addEventListener('scroll', () => {
+      if (window.innerWidth <= 480) return;
+
+      const scrollY = window.scrollY;
+      const maxBlur = 6;
+      const blurAmount = Math.min(scrollY / 60, maxBlur);
+      const scaleAmount = 1 + scrollY / 5000;
+      const opacityAmount = Math.min(scrollY / 300, 1);
+
+      blanket.style.opacity = opacityAmount;
+      blanket.style.backdropFilter = `blur(${blurAmount}px)`;
+      heroImage.style.filter = `blur(${1 + blurAmount}px)`;
+      heroImage.style.transform = `scale(${scaleAmount})`;
+    });
+
+    disclaimerButton.addEventListener('click', () => {
+      disclaimerModal.style.display = 'none';
+    });
+  </script>
+</body>
+</html>
