--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     }
 
     .gallery img {
-      width: 182px; /* Slightly increased width */
+      width: 190px;
       height: auto;
       border-radius: 12px;
       object-fit: cover;
