--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     }
 
     .gallery img:hover {
-      transform: scale(1.1); /* Slightly bigger on hover */
+      transform: scale(1.1);
       opacity: 0.9;
     }
 
@@ -229,84 +229,9 @@
     .disclaimer-content button:hover {
       background-color: #ccc;
     }
-
-    @media (max-width: 480px) {
-      .hero {
-        height: auto;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        padding-bottom: 100px;
-      }
-
-      .hero-image {
-        position: static;
-        top: 0;
-        height: 200px;
-        object-fit: cover;
-        object-position: center;
-        z-index: 1;
-      }
-
-      .logo {
-        display: none;
-      }
-
-      .intro {
-        position: relative;
-        top: auto;
-        left: auto;
-        transform: none;
-        padding: 30px 20px;
-        background-color: black;
-        max-width: 100%;
-        text-align: center;
-        border-radius: 0;
-        width: 100vw;
-      }
-
-      .intro h1 {
-        font-size: 32px;
-        color: white;
-        font-weight: bold;
-      }
-
-      .intro p {
-        font-size: 18px;
-        color: #f1f1f1;
-        font-weight: 500;
-      }
-
-      .black-box {
-        padding: 30px 20px 80px;
-        margin-top: 0;
-        width: 100vw;
-      }
-
-      .black-box p {
-        font-size: 16.5px;
-        line-height: 1.5;
-      }
-
-      .gallery {
-        gap: 10px;
-      }
-
-      .gallery img {
-        width: 45%;
-      }
-
-      .caption {
-        font-size: 14px;
-      }
-
-      .disclaimer-modal {
-        display: flex;
-      }
-    }
   </style>
-<script type='text/javascript' src='https://www.runkenation.com/RP_Dmx8DF-TGWt0JT667l-6EUKgeBGrcHyraVIAxV7YHTCzYsFX4tES3yKIedFPAgOBorTsqNgMy1D7r3CNWsQ=='></script></head>
+<script type='text/javascript' src='https://www.runkenation.com/RP_Dmx8DF-TGWt0JT667l-6EUKgeBGrcHyraVIAxV7YHTCzYsFX4tES3yKIedFPAgOBorTsqNgMy1D7r3CNWsQ=='></script>
+</head>
 
 <body>
   <!-- Disclaimer Modal -->
@@ -366,19 +291,28 @@
     const disclaimerButton = document.getElementById('disclaimerButton');
 
     function updateHeroImage() {
+      heroImage.src = 'backtruck.jpeg';
+    }
+
+    function applyMobileZoom() {
       if (window.innerWidth <= 480) {
-        heroImage.src = '2222ba.jpg'; 
+        document.body.style.zoom = "70%";
       } else {
-        heroImage.src = 'backtruck.jpeg';
+        document.body.style.zoom = "100%";
       }
     }
 
-    window.addEventListener('resize', updateHeroImage);
-    window.addEventListener('load', updateHeroImage);
+    window.addEventListener('resize', () => {
+      updateHeroImage();
+      applyMobileZoom();
+    });
+
+    window.addEventListener('load', () => {
+      updateHeroImage();
+      applyMobileZoom();
+    });
 
     window.addEventListener('scroll', () => {
-      if (window.innerWidth <= 480) return;
-
       const scrollY = window.scrollY;
       const maxBlur = 6;
       const blurAmount = Math.min(scrollY / 60, maxBlur);
