--- a/index.html
+++ b/index.html
@@ -276,10 +276,9 @@
 
   <div class="black-box">
     <p>
-      Runke is, simply put, a project by and for people who love music.<br><br>
+      Runke is a Alabama based band<br><br>
       We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br><br>
       The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br><br>
-      We love music, and we hope you'll join us in our journey :)  <br>
     </p>
 
     <div class="gallery">
