--- a/runkereads.html
+++ b/runkereads.html
@@ -8,7 +8,7 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      background-image: url('Spacepic.webp');
+      background-image: url('spacepic.webp');
       background-size: 150px;
       background-repeat: repeat;
       background-attachment: fixed;
