--- a/runkeportal.html
+++ b/runkeportal.html
@@ -55,9 +55,9 @@
     </div>
 
     <div class="box">
-      <p><a href="runkenation.com">Band Page</a></p>
-      <p><a href="runkenation.com/runkereads">Runke Reads</a></p>
-      <p><a href="runkenation.com/news">what we've been up to...</a></p>
+      <p><a href="index.html">Band Page</a></p>
+      <p><a href="runkereads">Runke Reads</a></p>
+      <p><a href="news">what we've been up to...</a></p>
       
     </div>
 
