--- a/news.html
+++ b/news.html
@@ -48,7 +48,7 @@
   <h1>Runke News</h1>
   <p>Oops! we haven't done anything yet...</p>
   <img id="randomGif" src="" alt="Random Banner" />
-  <audio id="audio" src="hellomybaby.mp3" preload="auto"></audio>
+  <audio id="audio" src="Hellomybaby.mp3" preload="auto"></audio>
 
   <script>
     const gifs = [
