--- a/news.html
+++ b/news.html
@@ -66,7 +66,7 @@
   <p>Oops! we haven't done anything yet...</p>
   <img id="randomGif" src="" alt="Random Banner" />
   <img id="mjfrog" src="mjfrog.gif" alt="Gliding Frog" />
-  <audio id="audio" src="hellomybaby.mp3" preload="auto"></audio>
+  <audio id="audio" src="Hellomybaby.mp3" preload="auto"></audio>
 
   <script>
     const gifs = [
