--- a/news.html
+++ b/news.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script type='text/javascript' src='https://www.runkenation.com/iSAaq2OVjJaASToyu5VntSDP9NSJoO0vwLGSWWpfbBpqraiIFca0w29YFevoYd9eHwrpNAc8-w-Pa9E_04v1dw=='></script>
   <meta charset="UTF-8" />
   <title>Runke News</title>
   <style>
@@ -58,6 +59,13 @@
     @keyframes glide {
       0% { left: -200px; }
       100% { left: 100%; }
+    }
+
+    @media (max-width: 480px) {
+      body {
+        transform: scale(1.4);
+        transform-origin: top left;
+      }
     }
   </style>
 </head>
