--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       Runke is a Alabama based band<br><br>
       We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br><br>
       The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br><br>
-      <a href="runkenation.com/runkeportal" target="_blank">Check out our stuff!</a>
+      <a href="runkeportal.html" target="_blank">Check out our stuff!</a>
     </p>
 
     <div class="gallery">
