--- a/news.html
+++ b/news.html
@@ -89,7 +89,7 @@
 <body>
   <h1>Runke News</h1>
   <p>Oops! we haven't done anything yet...</p> <br>
-  <p>Enjoy these advertisements while you wait!</p>
+  <p>Enjoy these advertisements while you wait!</p> <br> <br>
   <img id="randomGif" src="" alt="Random Banner" />
   <img id="mjfrog" src="mjfrog.gif" alt="Gliding Frog" />
   <audio id="audio" src="Hellomybaby.mp3" preload="auto"></audio>
