--- a/news.html
+++ b/news.html
@@ -26,20 +26,20 @@
     }
 
     h1 {
-      font-size: 48px;
+      font-size: 55px;
       margin-bottom: 30px;
       letter-spacing: 3px;
     }
 
     p {
-      font-size: 20px;
+      font-size: 30px;
       margin-top: 50px;
       max-width: 400px;
     }
 
     #randomGif {
-      margin-top: 30px;
-      max-width: 500px;
+      margin-top: 45px;
+      max-width: 550px;
       width: 100%;
       height: auto;
       cursor: pointer;
@@ -88,8 +88,7 @@
 </head>
 <body>
   <h1>Runke News</h1>
-  <p>Oops! we haven't done anything yet... <br>
-Enjoy these advertisements while you wait!</p> <br> <br>
+  <p>Oops! we haven't done anything yet... Enjoy these advertisements while you wait!</p> <br> <br>
   <img id="randomGif" src="" alt="Random Banner" />
   <img id="mjfrog" src="mjfrog.gif" alt="Gliding Frog" />
   <audio id="audio" src="Hellomybaby.mp3" preload="auto"></audio>
