--- a/news.html
+++ b/news.html
@@ -88,7 +88,7 @@
 </head>
 <body>
   <h1>Runke News</h1>
-  <p>Oops! we haven't done anything yet... Enjoy these advertisements while you wait!</p> <br> <br>
+  <p>Oops! we haven't done anything yet... </p> <br>
   <img id="randomGif" src="" alt="Random Banner" />
   <img id="mjfrog" src="mjfrog.gif" alt="Gliding Frog" />
   <audio id="audio" src="Hellomybaby.mp3" preload="auto"></audio>
