--- a/runkereads.html
+++ b/runkereads.html
@@ -1,21 +1,126 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script type='text/javascript' src='https://www.runkenation.com/NIbNgRFvy6Ex_9rVHqz9oiCHTNzVzRgIFWB9nReevnFhuIhGJcWmchZWkvnpaP4xcug5N4hJz70-fMvP3aQzHA=='></script>
   <meta charset="UTF-8">
   <title>Runke Reads</title>
   <style>
-    html, body {
+    body {
       margin: 0;
       padding: 0;
-      height: 100%;
+      font-family: Arial, sans-serif;
       background-image: url('backstar.gif');
       background-size: 350px;
       background-repeat: repeat;
       background-attachment: fixed;
       background-position: center;
+      color: white;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 4em;
+      font-weight: bold;
+      color: white;
+      margin: 40px 0 20px;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 0 20px 160px; /* Extra bottom padding for spacing */
+    }
+
+    .article {
+      background-color: black;
+      border: 2px solid royalblue;
+      border-radius: 15px;
+      padding: 20px;
+      margin-bottom: 100px; /* Big space below for future articles */
+      transition: 0.3s ease;
+    }
+
+    .article-title {
+      font-size: 1.5em;
+      font-weight: bold;
+      margin-bottom: 10px;
+      cursor: pointer;
+    }
+
+    .article-content {
+      display: none;
+      margin-top: 10px;
+      border-top: 1px solid maroon;
+      padding-top: 10px;
+    }
+
+    .pagination {
+      text-align: center;
+      font-size: 1.2em;
+      color: white;
+      position: fixed;
+      bottom: 20px;
+      left: 0;
+      width: 100%;
+      pointer-events: none;
+    }
+
+    .pagination span {
+      color: maroon;
+      font-weight: bold;
+      pointer-events: all;
+      cursor: pointer;
+    }
+
+    .article:hover {
+      box-shadow: 0 0 10px royalblue;
     }
   </style>
 </head>
 <body>
+  <h1>Runke Reads</h1>
+  <div class="container">
+
+    <div class="article">
+      <div class="article-title" onclick="toggleContent(this)">japanese steakhouse, at home? ▼</div>
+      <div class="article-content">
+        Are you tired of driving out to japanese steak houses, only to get your money AND eyebrows taken from you?
+ well I, Lucas, the bassist of Runke, have come up with a solution! <br>
+
+The food they make at these japanesesteakhouses are surprisingly simple, and cheap as well. <br> <br>
+
+<special> RECIPE: </special> <br>
+Simply get some sort of raw chicken, and cut it into bite-sized squares <br>
+(1:1:1 ratio → Per 6 oz chicken : 1 clove garlic : 1 tbsp butter : 1 tbsp soy sauce). <br>
+
+Then, oil a skillet or pan to medium-high heat.<br>
+
+Cook the chicken, but when it gets almost done, throw in 1 minced clove of garlic, along with 1 tablespoon of butter. <br>
+
+Afterwards, stir the garlic and butter until it is all melted and blended together. <br>
+
+Add 1-3 tablespoons of soy sauce and cook for 1–2 more minutes until it looks pretty!<br> <br>
+
+This recipe is cheap, easy, and something more people should take advantage of! <br> <br>
+~ Lucas
+
+      </div>
+    </div>
+
+  </div>
+
+  <div class="pagination">
+    <span>Page 1 →</span>
+  </div>
+
+  <script>
+    function toggleContent(element) {
+      const content = element.nextElementSibling;
+      const isVisible = content.style.display === 'block';
+      content.style.display = isVisible ? 'none' : 'block';
+      element.innerHTML = element.innerHTML.replace(isVisible ? '▲' : '▼', isVisible ? '▼' : '▲');
+    }
+  </script>
 </body>
 </html>
