--- a/runkeportal.html
+++ b/runkeportal.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="box">
-      <p><a href="">Band Page</a></p>
+      <p><a href="index">Band Page</a></p>
       <p><a href="runkereads">Runke Reads</a></p>
       <p><a href="news">what we've been up to...</a></p>
       
