--- a/runkereads.html
+++ b/runkereads.html
@@ -99,10 +99,10 @@
     <div class="article">
       <div class="article-title" onclick="toggleContent(this)">japanese steakhouse, at home? ▼</div>
       <div class="article-content">
-        Are you tired of driving out to japanese steak houses, only to get your money AND eyebrows taken from you?
+        Are you tired of driving out to japanese steakhouses, only to get your money AND eyebrows taken from you?
         well I, Lucas, the bassist of Runke, have come up with a solution! <br><br>
 
-        The food they make at these japanesesteakhouses are surprisingly simple, and cheap as well. <br><br>
+        The food they make are surprisingly simple, and cheap as well. <br><br>
 
         <special> RECIPE: </special> <br>
         Simply get some sort of raw chicken, and cut it into bite-sized squares <br>
