--- a/runkereads.html
+++ b/runkereads.html
@@ -102,7 +102,7 @@
         Are you tired of driving out to japanese steakhouses, only to get your money AND eyebrows taken from you?
         well I, Lucas, the bassist of Runke, have come up with a solution! <br><br>
 
-        The food they make are surprisingly simple, and cheap as well. <br><br>
+        The food they make is surprisingly simple, and cheap as well. <br><br>
 
         <special> RECIPE: </special> <br>
         Simply get some sort of raw chicken, and cut it into bite-sized squares <br>
