--- a/runkereads.html
+++ b/runkereads.html
@@ -106,7 +106,7 @@
 
         <special> RECIPE: </special> <br>
         Simply get some sort of raw chicken, and cut it into bite-sized squares <br>
-        (1:1:1 ratio → Per 6 oz chicken : 1 clove garlic : 1 tbsp butter : 1 tbsp soy sauce). <br>
+        (Per 6 oz chicken → 1 clove garlic : 1 tbsp butter : 1 tbsp soy sauce). <br>
 
         Then, oil a skillet or pan to medium-high heat.<br>
 
