--- a/runkereads.html
+++ b/runkereads.html
@@ -97,12 +97,12 @@
   <div class="container">
 
     <div class="article">
-      <div class="article-title" onclick="toggleContent(this)">japanese steakhouse, at home? ▼</div>
+      <div class="article-title" onclick="toggleContent(this)">japanese steakhouse secrets ▼</div>
       <div class="article-content">
         Are you tired of driving out to japanese steakhouses, only to get your money AND eyebrows taken from you?
         well I, Lucas, the bassist of Runke, have come up with a solution! <br><br>
 
-        The food they make is surprisingly simple, and cheap as well. <br><br>
+        The Hibachi Chicken they make is surprisingly simple, and cheap as well. <br><br>
 
         <special> RECIPE: </special> <br>
         Simply get some sort of raw chicken, and cut it into bite-sized squares <br>
