--- a/runkereads.html
+++ b/runkereads.html
@@ -97,7 +97,7 @@
   <div class="container">
 
     <div class="article">
-      <div class="article-title" onclick="toggleContent(this)">japanese steakhouse secrets ▼</div>
+      <div class="article-title" onclick="toggleContent(this)">japanese steakhouse secrets VOLUME 1 ▼</div>
       <div class="article-content">
         Are you tired of driving out to japanese steakhouses, only to get your money AND eyebrows taken from you?
         well I, Lucas, the bassist of Runke, have come up with a solution! <br><br>
