--- a/runkereads.html
+++ b/runkereads.html
@@ -108,7 +108,7 @@
         Simply get some sort of raw chicken, and cut it into bite-sized squares <br>
         (Per 6 oz chicken → 1 clove garlic : 1 tbsp butter : 1 tbsp soy sauce). <br>
 
-        Then, oil a skillet or pan to medium-high heat.<br>
+        Then, oil a skillet or pan, heating to medium-high heat.<br>
 
         Cook the chicken, but when it gets almost done, throw in 1 minced clove of garlic, along with 1 tablespoon of butter. <br>
 
