--- a/runkereads.html
+++ b/runkereads.html
@@ -114,7 +114,7 @@
 
         Afterwards, stir the garlic and butter until it is all melted and blended together. <br>
 
-        Add 1-3 tablespoons of soy sauce and cook for 1–2 more minutes until it looks pretty!<br>
+        Add 1-3 tablespoons of soy sauce and cook for 1–2 more minutes until it looks pretty!<br> <br>
 
         TIP: toss the chicken in teriyaki sauce after cooking for a sweet, flavorful coating!!! <br> <br>
 
